# dnncpp

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  dnncpp.sln  dnncpp.vcxproj  dnncpp.vcxproj.filters  main.cpp
include/dnncpp/activation/: activation.hpp  core.hpp  linear.hpp  sigmoid.hpp
include/dnncpp/layer/: layer.hpp
include/dnncpp/nn/: network.hpp
module/: layer.ixx
